--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -8,7 +8,7 @@
     <div class="page-header breadcrumb-wrap">
         <div class="container">
             <div class="breadcrumb">
-                <a href="index.html" rel="nofollow">صفحه اصلی<i class="fi-rs-home mr-5"></i></a>
+                <a href="{% url 'home:main' %}" rel="nofollow">صفحه اصلی<i class="fi-rs-home mr-5"></i></a>
                 <span></span> <a href="{% url 'shop:shop_main' %}">فروشگاه</a>
                 <span></span> سبد خرید
             </div>
