--- a/shop/templates/shop/shop-product.html
+++ b/shop/templates/shop/shop-product.html
@@ -74,24 +74,27 @@
                                 <div class="short-desc mb-30">
                                     <p class="font-lg">{{products.short_discription|safe}}</p>
                                 </div>
-                                <div class="detail-extralink mb-50">
-                                    <form action="{% url 'cart:cart_add' products.slug %}" method="post"  onclick="JSalert()">
-                                        {% csrf_token %}
-                                        <div class="attr-detail attr-size mb-30">
+                                 <div class="attr-detail attr-size mb-30">
                                             <strong class="mr-10">سایز / وزن: </strong>
                                             <ul class="list-filter size-filter font-small">
                                                 {% for data in products.size.all %}
-                                                <label for="">{{data.amount}}</label>
-                                                <li><input type="radio" name="size" value="{{data.amount}}"></li>
+                                                <!-- <label for="">{{data.amount}}</label> -->
+                                                <!-- <li><input type="radio" name="size" value="{{data.amount}}">{{data.amount}}</li> -->
+                                                  <li><a name="size" value="{{data.amount}}">{{data.amount}}</a></li>
                                                 {% endfor %}
                                             </ul>
                                         </div>
+                                <div class="detail-extralink mb-50">
+                                    <form action="{% url 'cart:cart_add' products.slug %}" method="post" class="d-flex"  onclick="JSalert()">
+                                        {% csrf_token %}
+                                       
                                         <div class="detail-qty border">
                                             <a href="#" class="qty-down"><i class="fi-rs-angle-small-down"></i></a>
-                                                <input type="text" name="quantity" value="1">
+                                                <!-- <input type="text" name="quantity" value="1" class="qty-val"> -->
+                                                <input type="text" name="quantity" class="qty-val" id="" value="1">
                                             <a href="#" class="qty-up"><i class="fi-rs-angle-small-up"></i></a>
                                         </div>
-                                        <div class="product-extra-link2">
+                                        <div class="product-extra-link2 d-flex ps-1">
                                             <button type="submit" class="button button-add-to-cart"><i class="fi-rs-shopping-cart"></i>افزودن به سبدخرید</button>
                                     </form>
                                         <form action="{% url 'shop:compares' products.slug %}" method="post">
